# decision-trainer-py

./: .gitignore  README.md
decision-trainer-py/: README.md  pyproject.toml  run_quiet.py  run_without_warnings.sh  test_prints.py  weave_example.py
decision-trainer-py/knowledge/: user_preference.txt
decision-trainer-py/output/: report.md
decision-trainer-py/src/decision_trainer/: crew.py  main.py  suppress_warnings.py
decision-trainer-py/src/decision_trainer/config/: agents.yaml  tasks.yaml
decision-trainer-py/src/decision_trainer/tools/: custom_tool.py
